--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+			<version>1.4.193</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
